# storage/api-docs/api-docs.json
@@ -951,8 +951,21 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "Producto eliminado con éxito. (No Content)"
+                    "200": {
+                        "description": "Pedido eliminado con éxito.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Pedido eliminado con éxito. Stock revertido."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "403": {
                         "description": "No autorizado"
